force-app/main/default/objects/Study_Pathway_Unit__c/Study_Pathway_Unit__c.object-meta.xml
<CustomObject>
    <description>The recommended units of study for a study pathway term.</description>
    <label>Study Pathway Unit</label>
    <nameField>
        <displayFormat>SPU-{00000}</displayFormat>
        <label>Study Pathway Unit #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Pathway Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>