force-app/main/default/objects/Study_Pathway_Unit__c/fields/Applicable_Study_Plan__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Study_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this is defined, the study pathway unit will only display if a student enrolled to the selected study plan.</description>
    <label>Applicable Study Plan</label>
    <referenceTo>Study_Plan__c</referenceTo>
    <relationshipLabel>Applicable Study Pathway Units</relationshipLabel>
    <relationshipName>Applicable_Study_Pathway_Units</relationshipName>
    <type>Lookup</type>
</CustomField>