force-app/main/default/objects/Study_Pathway_Unit__c/fields/Number_of_Units_from_Group__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units_from_Group__c</fullName>
    <label>Number of Units from Group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>