force-app/main/default/objects/Study_Pathway_Unit__c/fields/Study_Pathway_Term__c.field-meta.xml
<CustomField>
    <fullName>Study_Pathway_Term__c</fullName>
    <label>Study Pathway Term</label>
    <referenceTo>Study_Pathway_Term__c</referenceTo>
    <relationshipLabel>Study Pathway Units</relationshipLabel>
    <relationshipName>Study_Pathway_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>