force-app/main/default/objects/Study_Pathway_Unit__c/fields/Study_Plan_Group__c.field-meta.xml
<CustomField>
    <fullName>Study_Plan_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Plan Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Study_Plan_Structure__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Group</value>
        </filterItems>
        <infoMessage>Please select a group study plan structure.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Study_Plan_Structure__c</referenceTo>
    <relationshipLabel>Study Pathway Units</relationshipLabel>
    <relationshipName>Study_Pathway_Units</relationshipName>
    <type>Lookup</type>
</CustomField>