force-app/main/default/objects/Study_Pathway_Unit__c/fields/Study_Unit__c.field-meta.xml
<CustomField>
    <fullName>Study_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Unit</label>
    <referenceTo>Study_Unit__c</referenceTo>
    <relationshipLabel>Study Pathway Units</relationshipLabel>
    <relationshipName>Study_Pathway_Units</relationshipName>
    <type>Lookup</type>
</CustomField>